# unsafeTicks

./: .gitignore  .gitmodules  README.md  run.sh  shell.nix  ticketmaster-but-worse-client
Documentation/Poster/: poster.bbl  poster.fdb_latexmk  poster.fls  poster.tex  poster.vrb
Documentation/PosterTemplate/: poster.aux  poster.bbl  poster.bib  poster.blg  poster.fdb_latexmk  poster.fls  poster.tex
Documentation/PosterTemplate/figures/: WorkFlow.drawio
Documentation/Report/: 00-main.tex  01-question01.tex  02-question02.tex  03-question03.tex  04-question04.tex  bibliography.bib
Documentation/figures/: HackingFlow.drawio
client/: CMakeLists.txt
client/src/: QRCodeWindow.cpp  QRCodeWindow.h  exceptions-base.cpp  exceptions-base.hpp  main.cpp  server-connection.cpp  server-connection.hpp  ticket.cpp  ticket.hpp
server/: pyproject.toml
server/ticketmaster-but-worse/: app.py
server/unsafeTicks/: app.py
